2001-09-02  Jim Meyering  <meyering@lucent.com>

	* error.c: Update from GNU libc.

2001-09-01  Jim Meyering  <meyering@lucent.com>

	* xreadlink.c: New file.
	* xreadlink.h: New file.
	* Makefile.am (libfetish_a_SOURCES): Add xreadlink.c and xreadlink.h.

	* regex.c (uintptr_t) [!_LIBC]: Define to private_uintptr_t, so it
	doesn't conflict with sparc-sun-solaris2.7's definition in
	/usr/include/sys/int_types.h.

	* exclude.c: Use `""', not `<>' to #include non-system header files.
	(fnmatch_no_wildcards): Rewrite not to use function names, strcasecmp
	and strncasecmp as r-values.  Unixware didn't have declarations.

2001-08-31  Jim Meyering  <meyering@lucent.com>

	* xgetcwd.c (xgetcwd): Reorganize to avoid some duplication.
	Use an initial, malloc'd, buffer of length 128 rather than
	a statically allocated one of length 1024.

2001-08-30  Paul Eggert  <eggert@twinsun.com>

	* lib/xgetcwd.c: Don't include pathmax.h.
	Include stdlib.h and unistd.h if available.
	Include xalloc.h.
	(xmalloc, xstrdup, free): Remove decls.
	(xgetcwd): Don't assume sizes fit in unsigned.
	Check for overflow when computing sizes.
	Simplify reallocation code.

2001-08-28  Paul Eggert  <eggert@twinsun.com>

	* Makefile.am (libfetish_a_SOURCES): Remove strtoxmax.c.

	* strtoimax.c: Renamed from strtoxmax.c, removing the
	old strtoimax.c.

	Also, make the following further changes to make this file's
	configuration more similar to that of strtol.c:
	(UNSIGNED): Renamed from STRTOUXMAX_UNSIGNED.  All uses changed.
	(strtoumax, uintmax_t, strtoull, strtol): Remove.
	(intmax_t, strtoimax, strtol, strtoll): New macros, if UNSIGNED.
	(strtoimax): Renamed from strtoumax.  All uses of unsigned values
	changed to signed values.

	And make the following changes as well:
	Fix copyright notice, as 1999 was missing.
	(verify): New macro.
	(strtoimax): Check sizes at compile-time, not run-time.
	Prefer strtol to strtoll if both work.
	(main): Remove; it was not that useful and was a pain to maintain.
