@@ -1,3 +1,10 @@
+2001-09-03  Paul Eggert  <eggert@twinsun.com>
+
+	* prereq.m4 (jm_PREREQ): Add jm_PREREQ_XGETCWD.
+	(jm_PREREQ_XGETCWD): New macro.
+
+	* getcwd.m4: New file.
+
 2001-09-01  Jim Meyering  <meyering@lucent.com>
 
 	* jm-macros.m4 (jm_MACROS): Check for canonicalize_file_name.
